samples/_failures_safe/1761558485_722f10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2fd8c62.c: In function ‘main’:
./samples/SAFE/__tmp_c2fd8c62.c:149:12: error: missing terminating " character
  149 |     printf("Enter
      |            ^~~~~~
./samples/SAFE/__tmp_c2fd8c62.c:149:5: error: expected expression at end of input
  149 |     printf("Enter
      |     ^~~~~~
./samples/SAFE/__tmp_c2fd8c62.c:149:5: error: expected declaration or statement at end of input
